<resources>
    <string name="app_name">नेपाली Date Converter</string>
    <string name="title_activity_main">नेपाली Date Converter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="adName"> English Date:</string>
    <string name="bsName"> Nepali Date:</string>
    <string name="bsNameNepali">  नेपाली मिति :</string>
    <string name="hintYear">year</string>
    <string name="hintMonth">Month</string>
    <string name="hintDay">Day</string>
    <string name="hintBarsha">बर्ष </string>
    <string name="hintMaina">महिना </string>
    <string name="hintdin">दिन </string>

    <string name="convertButton">Convert</string>

    <string name="ansSymbol"> -></string>


</resources>
