<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/parent_layout_background"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30dp"
        android:textColor="@color/accentColor"
        android:text="@string/bsNameNepali"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nepYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hintBarsha"
            android:inputType="number" />

        <EditText

            android:id="@+id/nepMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hintMaina"
            android:inputType="number" />

        <EditText

            android:id="@+id/nepDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hintdin"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/BStoAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@color/primaryColor"
        android:textColor="#fff"
        android:layout_marginRight="8dp"
        android:text="@string/convertButton" />

    />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/accentColor"
        android:layout_marginTop="40dp"
        android:text="@string/adName"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/nepDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ansSymbol"
        android:layout_marginLeft="5dp"
        android:textColor="#000"
        android:typeface="sans"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</LinearLayout>